[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graforest-mcp"
version = "0.1.0"
mcpName = "io.github.graforest/graforest-mcp"
description = "Graforest MCP Server — Build, populate, and query Knowledge Graphs with AI. 13 tools for knowledge ingestion, search, traversal, and graph management."
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    { name = "Graforest", email = "support@graforest.ai" }
]
keywords = ["mcp", "ai", "knowledge-graph", "neo4j", "graforest", "claude", "cursor", "smithery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "certifi>=2024.0.0",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://graforest.ai"
Documentation = "https://graforest.ai/docs"
Repository = "https://github.com/graforest/graforest-mcp"
Issues = "https://github.com/graforest/graforest-mcp/issues"

[project.scripts]
graforest-mcp = "graforest_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graforest_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
